<resources>
    <string name="app_name">ChatterBox</string>
    <string name="sign_in">Sign In</string>

    <string name="facebook_app_id">169819973428395</string>


    <!--Auth screen string values-->
    <string name="activity_auth_signup_txtView">Register</string>
    <string name="activity_auth_login_txt_view">Login</string>
    <string name="auth_screen_email_hint">Email</string>
    <string name="auth_screen_password_hint">Password</string>
    <string name="login_screen_btnLogin_hint">Login</string>
    <string name="register_screen_btnRegister_hint">Register</string>

    <string name="sign_in_header_txt">Chatter away&#8230;!</string>

    <!--ellipsis &#8230;-->
    <string name="app_tag">Chatter, chatter, chatter&#8230;</string>

    <!--ERROR MESSAGES-->
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>

    <string name="invitation_message">Please join me for a friendly chat on ChatterBox</string>
    <string name="invitation_cta">Join</string>
    <string name="invitation_title">ChatterBox Invite</string>

    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <!--LOGIN FORM-->
    <string name="useremail_str">E-mail</string>
    <string name="userpassword_str">Password</string>
    <string name="loginbtn_str">Login</string>
    <string name="loginreset_btn_id">Forgot Password?</string>
    <!--SIGN UP FORM-->
    <string name="signup_email_str">Email</string>
    <string name="signup_password_str">Password</string>
    <string name="signup_button_str">Register</string>
    <string name="err_msg_password_short">Enter minimum 6 characters</string>
    <string name="resetpassword_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your email to send you password reset instructions</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="resetpass_btn_back_id"><![CDATA[<< Back]]></string>
    <string name="loginlay_signin_with">Or, sign in with…</string>
    <string name="app_desc">So you can chat more…</string>
    <string name="app_about_desc">Simple chat app build on Firebase</string>
    <string name="title_chats">Chats</string>
    <string name="chatfrag_item_lastchatter_img">Image of last person to chat</string>
    <string name="chatsfrag_last_message">Message</string>
    <string name="chatsfrag_whochat_message">Receiver</string>
    <string name="chatsfrag_timestamp">15:30</string>
    <string name="snackbar_warning_no_internet_conn">No internet connection</string>
    <string name="snackbar_no_internet_conn_retry">Retry</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="fab_new_chat">New Chat</string>
    <string name="new_group">New Group</string>
    <string name="snackbar_api_error">Error encountered, uh-oh</string>


</resources>
