<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout"/>

    <LinearLayout
        android:id="@+id/login_form_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_in"/>

        <!--email-->
        <AutoCompleteTextView
            android:id="@+id/useremail_id"
            android:hint="@string/useremail_str"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:inputType="textEmailAddress"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            tools:targetApi="jelly_bean_mr1" />

        <!--password-->
        <EditText
            android:id="@+id/userpassword_id"
            android:hint="@string/userpassword_str"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:targetApi="jelly_bean_mr1" />

        <Button
            android:id="@+id/login_btn_id"
            android:layout_width="300dp"
            android:text="@string/loginbtn_str"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/social_signin_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="400dp"
        android:orientation="vertical">
        
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible" />

    </LinearLayout>

</FrameLayout>