<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout android:id="@+id/login_form_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

        <!--email-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/useremail_txtinputlayout_id"
            android:layout_width="300dp"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/useremail_id"
                android:hint="@string/useremail_str"
                android:layout_gravity="center_horizontal"
                android:inputType="textEmailAddress"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textColor="@color/black"
                tools:targetApi="jelly_bean_mr1" />
        </android.support.design.widget.TextInputLayout>

        <!--password-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/userpassword_txtinputlayout_id"
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/userpassword_id"
                android:hint="@string/userpassword_str"
                android:inputType="textPassword"
                android:layout_gravity="center_horizontal"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                tools:targetApi="jelly_bean_mr1" />
        </android.support.design.widget.TextInputLayout>
        <!--TODO:add style to on click of button, customize it to change color when clicked, like a shadow-->
        <Button
            android:id="@+id/login_btn_id"
            android:layout_width="300dp"
            android:text="@string/loginbtn_str"
            android:background="@color/indigo_600"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/login_reset_btn_id"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/loginreset_btn_id"
            android:textAllCaps="false"
            android:textColor="@color/black" />
    </LinearLayout>

    <!--TODO: Github and Facebook login buttons-->
    <LinearLayout
        android:id="@+id/social_signin_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/loginlay_signin_with"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginlay_signin_with"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:targetApi="jelly_bean_mr1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="visible" />

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/twitter_login_button"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <!--add Facebook login-->

    </LinearLayout>
    </LinearLayout>
</LinearLayout>
